--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sampaadak",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "A text editor based on Tip Tap",
   "main": "src/index.js",
   "module": "src/index.js",
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.0.0",
+    "@tiptap/extension-image": "^2.4.0",
     "@tiptap/extension-text-style": "^2.4.0",
     "@tiptap/extension-youtube": "^2.4.0",
     "@tiptap/pm": "^2.0.0",
-    "@tiptap/starter-kit": "^2.0.0"
+    "@tiptap/starter-kit": "^2.0.0",
+    "tiptap-extension-resize-image": "^1.1.7"
   },
   "homepage": "https://github.com/anudwigna/sampaadak#readme",
   "devDependencies": {
