cleaning and readme update

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/anudwigna/sampaadak.git"
   },
   "author": "Abhinandan Aryal",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/anudwigna/sampaadak/issues"
   },
