--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sampaadak",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "A text editor based on Tip Tap",
   "main": "src/index.js",
   "module": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
-    "start": "webpack --config webpack.config.js && http-server ./test"
+    "start": "webpack --config webpack.config.js && http-server ./dist"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "@babel/preset-env": "^7.24.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "http-server": "^14.1.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
