--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sampaadak",
-  "version": "1.0.18",
+  "version": "1.0.19",
   "description": "A text editor based on Tip Tap",
   "main": "src/index.js",
   "module": "src/index.js",
@@ -21,6 +21,10 @@
   "dependencies": {
     "@tiptap/core": "^2.0.0",
     "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-table": "^2.5.7",
+    "@tiptap/extension-table-cell": "^2.5.7",
+    "@tiptap/extension-table-header": "^2.5.7",
+    "@tiptap/extension-table-row": "^2.5.7",
     "@tiptap/extension-text-style": "^2.4.0",
     "@tiptap/extension-youtube": "^2.4.0",
     "@tiptap/pm": "^2.0.0",
