--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.0.0",
+    "@tiptap/extension-color": "^2.6.2",
     "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-link": "^2.6.2",
     "@tiptap/extension-table": "^2.5.7",
     "@tiptap/extension-table-cell": "^2.5.7",
     "@tiptap/extension-table-header": "^2.5.7",
